--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -10,6 +10,14 @@
 {% endblock %}
 
 {% block content %}
+  {% if comment_form.errors %}
+    <div id="alert">
+      <h2>Saving the comment Failed!</h2>
+      <p>Please check the comment form below the post and fix your errors.</p>
+      <a href="#comment-form">Fix!</a>
+    </div>
+  {% endif %}
+
   <section id="summary">
     <h2>{{ post.title }}</h2>
     <div>
@@ -28,7 +36,38 @@
     </article>
   </section>
 
+
+
   <main>
     {{post.content|linebreaks}}
   </main>
+
+  <section id="comments">
+    
+    <ul>
+      {% for comment in comments %}
+        <li>
+          <h2>{{ comment.user_name }}</h2>
+          <p>{{ comment.text|linebreaks }}</p>
+        </li>
+      {% endfor %}
+    </ul>
+      
+  </section>
+
+  <div id="comment-form">
+    <h2>Your Comment</h2>
+    <form action="{% url 'post-detail-page' post.slug %}" method="POST">
+      {% csrf_token %}
+      {% for form_field in comment_form %}
+        <div class="form-control {% if form_field.errors %}invalid{% endif %}">
+          {{ form_field.label_tag }}
+          {{ form_field }}
+          {{ form_field.errors }}
+        </div>
+      {% endfor %}
+      <button>Comment</button>
+    </form>
+  </div>
+
 {% endblock %}
