--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -32,7 +32,15 @@
       <form action="{% url 'read-later' %}" method="POST">
         {% csrf_token %}
         <input type="hidden" name="post_id" id="" value="{{ post.id }}">
-        <button>Read Later</button>
+        <button>
+          
+          {% if saved_for_later %}
+            Remove from "Read Later" list
+          {% else %}
+            Read Later
+          {% endif %}
+            
+        </button>
       </form>
     </div>
 
