--- a/blog/templates/blog/stored_posts.html
+++ b/blog/templates/blog/stored_posts.html
@@ -1,16 +1,24 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
   My Stored Posts
-{% endblock title %}My Stored Posts
+{% endblock title %}
+
+{% block css_files %}
+  <link rel="stylesheet" href="{% static 'blog/read-later.css' %}">
+{% endblock css_files %}
 
 {% block content %}
-  <section>
+  <section id="stored-posts">
+    {% if not has_posts %}
+      <p>You didn't save post</p>
+    {% endif %}
     <ul>
-        <li><a href="">Post Title</a></li>
-        <li><a href="">Post Title</a></li>
-        <li><a href="">Post Title</a></li>
-        <li><a href="">Post Title</a></li>
+      
+      {% for post in posts %}
+        <li><a href="{% url 'post-detail-page' post.slug %}">{{ post.title }}</a></li>
+      {% endfor %}
     </ul>
   </section>
 {% endblock content %}
